--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/Export.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/Export.cshtml
@@ -40,7 +40,7 @@
                 <th>Invoice</th>
                 <th>Explanation</th>
                 <th>SellerCheck</th>
-                <th>Putback</th>
+                <th>Initiated By</th>
                 <th>Seller</th>
 
             </tr> 
@@ -76,7 +76,7 @@
                      <td>@recallRecord.Invoice</td>
                      <td>@recallRecord.Explanation</td>
                      <td>@recallRecord.SellerCheck</td>
-                     <td>@recallRecord.Putback</td>
+                     <td>@recallRecord.InitiatedBy</td>
                      <td>@recallRecord.Seller</td>
 
                 </tr> 
