--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/Index.cshtml
@@ -68,7 +68,7 @@
     <table class="searchtable" style="width: 80%" data-bind="visible:showSearchCriteria" id="tblserchCriteria">
         <tr>
             <td colspan="3">
-                <b>Identify Recall Initiation and Search Recall Data::</b>
+                <b>Identify Recall Initiation and Search Recall Data:</b>
             </td>
         </tr>
         <tr>
@@ -296,7 +296,7 @@
                                     <td style="text-align: left; width: 30%">Invoice</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                                        <input id="newInvoice" type="text" data-bind="value:newInvoice" readonly="true"/>
+                                        <input id="newInvoice" type="text" data-bind="value:newInvoice, enable:isenable"/>
                 
                                     </td>
                                 </tr>
@@ -304,7 +304,7 @@
                                     <td style="text-align: left; width: 30%">Seller Check#</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                                    <input id="newSellerCheck" type="text" data-bind="value:newSellerCheck" readonly="true" />
+                                    <input id="newSellerCheck" type="text" data-bind="value:newSellerCheck,enable:isenable" />
                 
                                      </td>
                                 </tr>
