--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/ViewRecall.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/ViewRecall.cshtml
@@ -86,11 +86,7 @@
         //Client side View Model
         function reportCriteriaVM() {
 
-            var href = window.location.href.split('/');
-            var baseUrl = href[0] + '//' + href[2] + '/' + href[3];
-            //alert(baseUrl);
-
-            var apiUrl = '/api/Lookup/';
+            var apiUrl = baseUrl + '/api/Lookup/';
 
             var self = this;
 
@@ -170,7 +166,7 @@
                 if (self.validationErrors() == '') {
 
                     //Get the data and Load in the div
-                    $("#divRecallResults").load(baseUrl + '/Recall/GetAllRecallRecords?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Portfolio=' + self.company() + '&Responsibility=' + self.responsibility() + '&Account=' + self.newPIMSAccount() + '&GUID=' + self.newGUID());
+                    $("#divRecallResults").load(baseUrl + '/Recourse/Recall/GetAllRecallRecords?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Portfolio=' + self.company() + '&Responsibility=' + self.responsibility() + '&Account=' + self.newPIMSAccount() + '&GUID=' + self.newGUID());
 
                 }
                 else {
