--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/_recallRecords.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/_recallRecords.cshtml
@@ -27,7 +27,7 @@
                 <th>Acct Closed Date</th>
                 <th>Name</th>
                 <th>PIMS Account</th>
-                <th>Unique ID #</th>
+                <th>Initiated By</th>
             </tr> 
         </thead> 
         <tbody> 
@@ -41,7 +41,7 @@
                     <td>@recallRecord.DateAcctClosed.ConverToDate()</td>
                     <td>@recallRecord.AcctName</td>
                     <td>@recallRecord.PIMSAcct</td>
-                    <td>@recallRecord.GUID</td>
+                    <td>@recallRecord.InitiatedBy</td>
                 </tr> 
             }
         </tbody>
