--- a/CascadeSolution/Cascade.Web/Areas/Reports/Views/Home/Index.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Reports/Views/Home/Index.cshtml
@@ -77,11 +77,7 @@
         //Client side View Model
         function reportCriteriaVM() {
 
-            var href = window.location.href.split('/');
-            var baseUrl = href[0] + '//' + href[2] + '/' + href[3];
-            //alert(baseUrl);
-
-            var apiUrl = '/api/Lookup/';
+            var apiUrl = baseUrl + '/api/Lookup/';
             
             var self = this;
             
@@ -180,7 +176,7 @@
                 if (self.validationErrors() == '') {
                     //Get the data and Load in the div
                     //alert(baseUrl);
-                    $("#divReportResults").load(baseUrl + '/Home/GetReportData?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Company=' + self.company() + '&ToRange=' + self.ToRange() + '&FromRange=' + self.FromRange() + '&ReportType=' + $('#reportType').val());
+                    $("#divReportResults").load(baseUrl + '/Reports/Home/GetReportData?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Company=' + self.company() + '&ToRange=' + self.ToRange() + '&FromRange=' + self.FromRange() + '&ReportType=' + $('#reportType').val());
                 }
                 else {
                     $.each(self.validationErrors(), function (i, item) {
