--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/DPS/ViewDPS.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/DPS/ViewDPS.cshtml
@@ -86,11 +86,8 @@
         //Client side View Model
         function reportCriteriaVM() {
 
-            var href = window.location.href.split('/');
-            var baseUrl = href[0] + '//' + href[2] + '/' + href[3];
-            //alert(baseUrl);
-
-            var apiUrl = '/api/Lookup/';
+            
+            var apiUrl = baseUrl + '/api/Lookup/';
 
             var self = this;
 
@@ -171,7 +168,7 @@
                 if (self.validationErrors() == '') {
 
                     //Get the data and Load in the div
-                    $("#divDPSResults").load(baseUrl + '/DPS/GetAllDPSRecords?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Portfolio=' + self.company() + '&Responsibility=' + self.responsibility() + '&Account=' + self.newPIMSAccount() + '&GUID=' + self.newGUID());
+                    $("#divDPSResults").load(baseUrl + '/Recourse/DPS/GetAllDPSRecords?StartDate=' + self.StartDate() + '&EndDate=' + self.EndDate() + '&Portfolio=' + self.company() + '&Responsibility=' + self.responsibility() + '&Account=' + self.newPIMSAccount() + '&GUID=' + self.newGUID());
                     
                 }
                 else {
