--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/DetailsPutback.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Recall/DetailsPutback.cshtml
@@ -224,15 +224,15 @@
                                     <td style="text-align: left; width: 30%">Cost Basis</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                                        <input id="newCostBasis" type="text" data-bind="value:newCostBasis" readonly="true"/>
+                                        <input id="newCostBasis" type="text" data-bind="value:newCostBasis,enable:false"/>
                 
                         </td>
                                 </tr>
                                 <tr>
-                                    <td style="text-align: left; width: 60%">Receivable Amount</td>
+                                    <td style="text-align: left; width: 30%">Receivable Amount</td>
                                     <td style="text-align: center; width: 1%">:</td>
-                                    <td style="width: 39%; text-align: left">
-                                        <input id="newAmtReceivable" type="text"  readonly="true"  data-bind='value: amtReceivableComputed'  />
+                                    <td style="width: 69%; text-align: left">
+                                        <input id="newAmtReceivable" type="text" data-bind='value: amtReceivableComputed,enable:false'  />
                 
                                      </td>
                                 </tr>
@@ -240,7 +240,7 @@
                                     <td style="text-align: left; width: 30%">Invoice</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                                        <input id="newInvoice" type="text" data-bind="value:newInvoice,enable:isenable"/>
+                                        <input id="newInvoice" type="text" data-bind="value:newInvoice"/>
                 
                                     </td>
                                 </tr>
@@ -248,11 +248,18 @@
                                     <td style="text-align: left; width: 30%">Seller Check#</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                                    <input id="newSellerCheck" type="text" data-bind="value:newSellerCheck,enable:isenable" />
+                                    <input id="newSellerCheck" type="text" data-bind="value:newSellerCheck" />
                 
                                      </td>
                                 </tr>
-                                
+                                <tr>
+                                    <td style="text-align: left; width: 60%">Check Upload (Y/N)?</td>
+                                    <td style="text-align: center; width: 1%">:</td>
+                                    <td style="width: 39%; text-align: left">
+                                        <input type="checkbox" data-bind="checked: newUploaded" />
+                                        &nbsp;&nbsp;<input type="button" class="editButton" value="&nbsp;Manage Check Images&nbsp;" data-bind="click:manageCheckImages" />
+                                    </td>
+                                </tr>
 
 
                             </table>
@@ -265,7 +272,7 @@
                                     <td style="text-align: left; width: 30%">Sales Basis</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                            <input id="newSalesBasis" type="text" data-bind="value:newSalesBasis" readonly="true"/>
+                            <input id="newSalesBasis" type="text" data-bind="value:newSalesBasis,enable:false" />
                 
                              </td>
                                 </tr>
@@ -273,7 +280,7 @@
                                     <td style="text-align: left; width: 30%">Payable Amount</td>
                                     <td style="text-align: center; width: 1%">:</td>
                                     <td style="width: 69%; text-align: left">
-                            <input id="newAmtPayable" type="text"  readonly="true" data-bind='value: amtPayableComputed' />
+                            <input id="newAmtPayable" type="text"  data-bind='value: amtPayableComputed,enable:false' />
                 
                         </td>
                                 </tr>
@@ -281,7 +288,7 @@
                             <td style="text-align: left; width: 30%">Check No</td>
                             <td style="text-align: center; width: 1%">:</td>
                             <td style="width: 69%; text-align: left">
-                            <input id="newCheckNo" type="text" data-bind="value:newCheckNo" />
+                            <input id="newCheckNo" type="text" data-bind="value:newCheckNo,enable:false" />
                 
                         </td>
                                 </tr>
@@ -312,6 +319,53 @@
                 </table>
 </div>
 
+
+<div id="fileUploadContainer" style="display:none;font-size:small">
+    @using (Html.BeginForm("UploadAllDocumentsPutBack", "Recall", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+         <table class="FileUploadTable">
+             
+             <tr>
+                 <td colspan="2">Check Images</td>
+                 <td colspan="2">
+                     <input name="checkDocuments" id="checkDocuments" data-bind="value:checkDocuments"  type="file"  multiple/>
+                 </td>
+             </tr>
+             <tr><td colspan="4" class="dummyitem">&nbsp;</td></tr>
+             <tr>
+                    <td colspan="4">
+                        <input type="submit" class="editButton" value="&nbsp;Upload&nbsp;& Exit" data-bind="visible:showUpload"/>
+                    </td>
+             </tr>
+             <tr data-bind="if: visible">
+                <td colspan="4">
+                    <table>
+                        <tr><td><b>Existing uploaded Images:</b></td></tr>
+                        <tbody data-bind="foreach: checkImageDocuments">
+                            <tr>
+                                <td>
+                                  <a data-bind="attr: { href: checkDocUrl }"><span data-bind="text:checkFileName"></span></a>
+                                </td>
+                               
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+              </tr>
+              <tr data-bind="ifnot: visible">
+                <td colspan="4">
+                    <table>
+                        <tr><td><b>Existing uploaded Images:</b>&nbsp;Not Uploaded Yet</td></tr>
+                    </table>
+                </td>
+              </tr>
+             
+         </table>
+         @Html.Hidden("hdnPutbackRecordID", (string)(@ViewBag.hdnId))
+        
+    }
+</div>
+
 @Scripts.Render("~/bundles/knockout")
 
 @section scripts{
@@ -320,6 +374,8 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#messageSummary').dialog({ modal: true, title: 'Summary:', autoOpen: false, width: 200, height: 200 });
+            //For file upload Div
+            $('#fileUploadContainer').dialog({ modal: true, title: 'Upload Check Images:', autoOpen: false, width: 500, height: 400 });
             //Page view model
             var pageVM = new pageViewModel($('#userId').val(), $('#agencyId').val(), $('#hdnUserRole').val(), $('#hdnId').val());
             //Knockout Bindings
